--- a/css/museum/style.css
+++ b/css/museum/style.css
@@ -81,7 +81,7 @@ h2 {
 
 h3 {
   font-family: "Open Sans", Helvetica, sans-serif;
-  font-size: 1.25rem;
+  font-size: 25px;
   font-weight: bold; }
 
 ul.bulletlist li {
@@ -113,7 +113,8 @@ header {
 
 .searchbox-mobileonly {
   background-color: #EAE9EA;
-  padding: 25px; }
+  padding: 25px;
+  margin-top: 10px; }
   .searchbox-mobileonly .searchbox-text {
     margin-bottom: 10px; }
 
@@ -165,7 +166,7 @@ form.searchbox {
     padding-top: 3rem; }
   .banner h3 {
     color: #8B898A;
-    font-size: 22px;
+    font-size: 23px;
     font-weight: bold;
     line-height: 5rem;
     padding-bottom: 3rem;
@@ -176,7 +177,7 @@ form.searchbox {
       color: #D01031; }
 
 .benefitslist h3 {
-  font-size: 2.5em;
+  font-size: 2rem;
   margin-bottom: .6rem;
   padding: .5rem 0;
   font-weight: bold; }
@@ -316,6 +317,9 @@ footer {
     float: left;
     width: 33%; }
 
+  .regbutton .button {
+    padding: 12px; }
+
   .twocolumns .twocolumns-column {
     float: left;
     width: 48%;
@@ -331,7 +335,8 @@ footer {
     width: 50%; }
 
   .bodyform .regbutton {
-    float: right; }
+    float: right;
+    padding-top: 10px; }
     .bodyform .regbutton button {
       float: right;
       width: auto; } }
