--- a/css/museum/style.scss
+++ b/css/museum/style.scss
@@ -66,7 +66,7 @@ h2 {
 
 h3 {
 	font-family: $open-sans-font;
-	font-size: 1.25rem;
+	font-size: 25px;
 	font-weight: bold;
 }
 
@@ -125,6 +125,7 @@ header {
 .searchbox-mobileonly {
 	background-color: $light-graybox;
 	padding: 25px;
+	margin-top: 10px;
 
 	.searchbox-text {
 		margin-bottom: 10px;
@@ -203,7 +204,7 @@ form.searchbox {
 	h3 {
 
 		color: $light-gray-font;
-		font-size: 22px;
+		font-size: 23px;
 		font-weight:bold;
 		line-height: 5rem;
 		padding-bottom: 3rem;
@@ -223,7 +224,7 @@ form.searchbox {
 .benefitslist {
 
 	h3 {
-		font-size: 2.5em;
+		font-size: 2rem;
 		margin-bottom: .6rem;
 		padding: .5rem 0;
 		font-weight: bold;
@@ -477,7 +478,11 @@ footer {
 			width: 33%;
 		}
 	}
-
+	.regbutton {
+		.button{
+			padding:12px;
+		}
+	}
 	.twocolumns {
 
 		.twocolumns-column {
@@ -508,6 +513,7 @@ footer {
 	
 		.regbutton {
 			float:right;
+			padding-top: 10px;
 			button {
 				float:right;
 				width:auto;
