--- a/css/tshirts/style.css
+++ b/css/tshirts/style.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css?family=Lobster");
 html {
   font-size: 10px; }
 
@@ -39,47 +40,60 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-h1 {
-  float: none;
-  display: block; }
-  h1 a {
-    background-image: url("../../imgs/tshirts/Tailoredtees.png");
-    background-position: center;
-    display: block; }
+.main-header {
+  text-align: center;
+  margin-bottom: 2rem;
+  margin-top: 2rem; }
 
 body {
   background-color: #e6f5ff; }
 
-/*.hide-text {
-	font-family: Helvetica, sans-serif;
-	color: #fff;
-	text-align: center;
-	text-decoration: none;
-	font-size: 50px;
-}*/
 .navbarlinks {
+  background-color: #348FB2;
+  font-family: 'Lobster', sans-serif;
+  font-size: 7.2em;
+  font-weight: bold;
+  padding: 2rem;
   text-align: center;
-  font-size: 1.5rem;
-  font-family: Arial, sans-serif;
-  background-color: #666; }
+  letter-spacing: .3rem;
+  color: white;
+  text-shadow: 2px 2px 2px #000000;
+  -moz-border-radius-bottomright: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  -webkit-box-shadow: 0px 6px 9px 0px rgba(50, 50, 50, 0.94);
+  -moz-box-shadow: 0px 6px 9px 0px rgba(50, 50, 50, 0.94);
+  box-shadow: 0px 6px 9px 0px rgba(50, 50, 50, 0.94); }
 
 .navbarlinks a {
   color: #fff;
-  text-decoration: none;
-  padding: 30px;
-  margin: 20px 0; }
+  font-family: 'Lobster', bold, sans-serif;
+  font-size: 40px;
+  display: block;
+  margin: 10px;
+  padding: 20px;
+  text-decoration: none; }
+
+.navbarlinks a:hover {
+  color: #B8ECFF; }
 
 .main-container {
   margin: 0 auto;
   max-width: 1024px;
-  width: 100%;
-  padding-top: 4rem; }
+  padding-top: 4rem;
+  width: 100%; }
   .main-container .column {
+    background-color: #fff;
     box-sizing: border-box;
-    float: left;
     padding: 15px;
-    width: 33%;
-    background-color: #fff; }
+    width: 100%;
+    max-width: 400px;
+    margin-bottom: 10rem;
+    margin-left: auto;
+    margin-right: auto; }
 
 .box {
   background-position: center 13px;
@@ -87,14 +101,23 @@ body {
   background-size: 85%;
   border: 3px solid #5CA4D7;
   box-sizing: border-box;
-  height: 21rem;
-  position: relative; }
-  .box.box-blue-shirt {
-    background-image: url("../../imgs/tshirts/shirt_blue.jpg"); }
-  .box.box-yellow-shirt {
-    background-image: url("../../imgs/tshirts/shirt_yellow.jpg"); }
-  .box.box-pink-shirt {
-    background-image: url("../../imgs/tshirts/shirt_pink.jpg"); }
+  /*height: 21rem;*/
+  position: relative;
+  	/*&.box-blue-shirt {
+  		background-image: url('../../imgs/tshirts/shirt_blue.jpg')
+  	}
+  
+  	&.box-yellow-shirt {
+  		background-image: url('../../imgs/tshirts/shirt_yellow.jpg')
+  	}
+  
+  	&.box-pink-shirt {
+  		background-image: url('../../imgs/tshirts/shirt_pink.jpg')
+  	}*/ }
+  .box .tshirtImage {
+    margin-bottom: 65px;
+    margin-top: 20px;
+    width: 100%; }
 
 .icon-row {
   background-color: #FFF;
@@ -105,10 +128,10 @@ body {
   width: 100%; }
 
 .icon-row::after {
+  clear: both;
   content: " ";
   display: block;
-  height: 0;
-  clear: both; }
+  height: 0; }
 
 .icon-row a {
   border-right: 3px solid #5CA4D7;
@@ -116,18 +139,20 @@ body {
   color: #5CA4D7;
   display: block;
   float: left;
+  font-family: Futura, bold, sans-serif;
   font-size: 1.2rem;
   padding: 1rem;
+  position: relative;
   text-align: center;
-  width: 20%;
-  position: relative; }
+  width: 20%; }
 
 .icon-row a:last-child {
   border-right: none; }
 
 .icon-row a:hover {
   background-color: #5CA4D7;
-  color: #fff; }
+  color: #fff;
+  text-shadow: 1px 1.8px 1px #000000; }
   .icon-row a:hover .popup {
     visibility: visible;
     opacity: 1;
@@ -146,21 +171,24 @@ body {
 
 .flip-button:hover {
   background-color: #5CA4D7;
-  color: #fff; }
+  color: #fff;
+  text-shadow: 1px 1px 1px #000000; }
 
 h2 {
-  color: #5CA4D7;
+  color: #C1882A;
+  font-family: Futura,bold, sans-serif;
   font-size: 25px;
-  margin-top: 35px; }
+  margin-top: 35px;
+  margin-bottom: 55px; }
 
 h2 span {
-  color: #5CA4D7;
+  color: #C1882A;
   float: right;
   font-weight: bold; }
 
 .XL-button {
-  text-decoration: none;
-  font-weight: bold; }
+  font-weight: bold;
+  text-decoration: none; }
 
 .box-pink-shirt .square-button {
   color: #D583AC !important; }
@@ -169,30 +197,30 @@ h2 span {
   color: #DEB17E !important; }
 
 .popup {
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
   background-color: #fff;
   border: 3px solid #5CA4D7;
   bottom: 120%;
-  width: 106%;
   left: 50%;
   margin-left: -53%;
-  transition: all .5s; }
+  opacity: 0;
+  position: absolute;
+  transition: all .5s;
+  visibility: hidden;
+  width: 106%; }
 
 .popup:before, .popup:after {
-  content: " ";
+  border-color: transparent;
   border-style: solid;
+  content: " ";
+  height: 0;
+  left: 50%;
   position: absolute;
   top: 100%;
-  left: 50%;
-  width: 0;
-  height: 0;
-  border-color: transparent; }
+  width: 0; }
 
 .popup:after {
-  border-width: 12px;
   border-top-color: #fff;
+  border-width: 12px;
   margin-left: -12px; }
 
 .popup:before {
@@ -215,11 +243,42 @@ h2 span {
 .green-square {
   color: #8BB992; }
 
+.container-sizes {
+  height: 12rem;
+  margin: 0 auto;
+  padding-bottom: 4rem; }
+
 .container-sizes-size {
-  position: relative; }
+  background-image: url("../../imgs/tshirts/shirt_icon.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  padding: 18px; }
+  .container-sizes-size p {
+    font-size: 10px; }
 
 .container-sizes-size-letter {
   color: #5CA4D7;
-  position: absolute; }
+  text-shadow: none; }
+
+/* media querie section */
+/*tablet*/
+@media only screen and (min-width: 768px) {
+  .main-container {
+    width: 100%; }
+    .main-container .column {
+      box-sizing: border-box;
+      float: left;
+      width: 33%; }
+
+  .navbarlinks a {
+    display: inline-block;
+    font-size: 36px;
+    margin: 10px;
+    padding: 10px; } }
+/*laptop*/
+/*@media screen 
+  and (min-device-width: 1200px) */
 
 /*# sourceMappingURL=style.css.map */
