--- a/css/tshirts/style.scss
+++ b/css/tshirts/style.scss
@@ -4,62 +4,83 @@
 
 @import 'mixins';
 
+@import url('https://fonts.googleapis.com/css?family=Lobster');
 
 
-h1{
-			float:none;
-			display:block;
-
-			a {
-
-				background-image: url('../../imgs/tshirts/Tailoredtees.png');
-				background-position: center;
-				display:block;
 
 
-			}
+$width-ipad: 768px;
+$width-laptop-small: 1000px;
+$width-laptop-large: 1200px;
 
-		}
+
+
+.main-header {
+	
+  text-align: center;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
 body {
 	background-color: #e6f5ff;
+
 }
-	/*.hide-text {
-		font-family: Helvetica, sans-serif;
-		color: #fff;
-		text-align: center;
-		text-decoration: none;
-		font-size: 50px;
-	}*/
 
 .navbarlinks {
+	background-color: #348FB2;
+	font-family: 'Lobster', sans-serif;
+	font-size: 7.2em;
+	font-weight: bold;
+	padding:2rem;
 	text-align: center;
-	font-size: 1.5rem;
-	font-family: Arial, sans-serif;
-	background-color: #666;
-
-
+	letter-spacing: .3rem;
+	color: white;
+    text-shadow: 2px 2px 2px #000000;
+    -moz-border-radius-bottomright: 5px;
+-webkit-border-bottom-right-radius: 5px;
+border-bottom-right-radius: 5px;
+-moz-border-radius-bottomleft: 5px;
+-webkit-border-bottom-left-radius: 5px;
+border-bottom-left-radius: 5px;
+-webkit-box-shadow: 0px 6px 9px 0px rgba(50, 50, 50, 0.94);
+-moz-box-shadow:    0px 6px 9px 0px rgba(50, 50, 50, 0.94);
+box-shadow:         0px 6px 9px 0px rgba(50, 50, 50, 0.94);
 }
 .navbarlinks a {
 	color:#fff;
+	font-family: 'Lobster', bold, sans-serif;
+	font-size: 40px;
+	display:block;
+	margin: 10px;
+	padding:20px;
 	text-decoration: none;
-	padding:30px;
-	margin: 20px 0;
+	
 
+
+
+}
+.navbarlinks a:hover {
+	color: #B8ECFF;
+	
 }
 
 .main-container {
 
     margin: 0 auto;
     max-width: 1024px;
-    width: 100%;
     padding-top: 4rem;
+    width: 100%;
 
 	.column {
-		box-sizing: border-box;
-		float:left;
-		padding: 15px;
-		width:33%;
 		background-color: #fff;
+		box-sizing: border-box;
+		padding: 15px;
+		width:100%;
+		max-width: 400px;
+		margin-bottom: 10rem;
+		margin-left:auto;
+		margin-right: auto;
 	}
 
 }
@@ -71,10 +92,10 @@ body {
 	background-size: 85%;
 	border: 3px solid $light-blue;
 	box-sizing: border-box;
-	height: 21rem;
+	/*height: 21rem;*/
 	position: relative;
 
-	&.box-blue-shirt {
+	/*&.box-blue-shirt {
 		background-image: url('../../imgs/tshirts/shirt_blue.jpg')
 	}
 
@@ -84,7 +105,12 @@ body {
 
 	&.box-pink-shirt {
 		background-image: url('../../imgs/tshirts/shirt_pink.jpg')
-	}
+	}*/
+		.tshirtImage {
+			margin-bottom: 65px;
+			margin-top:20px;
+			width:100%;
+		}
 
 
 }
@@ -99,10 +125,10 @@ body {
 }
 
 .icon-row::after {
+	clear:both;
 	content: " ";
 	display:block;
 	height:0;
-	clear:both;
 
 }
 .icon-row a {
@@ -111,11 +137,12 @@ body {
 	color:$light-blue;
 	display:block;
 	float:left;
+	font-family: Futura, bold, sans-serif;
 	font-size: 1.2rem;
 	padding:1rem;
+	position:relative;
 	text-align:center;
 	width:20%;
-	position:relative;
 
 
 }
@@ -127,6 +154,7 @@ body {
 .icon-row a:hover {
 	background-color: $light-blue;
 	color:#fff;
+	text-shadow: 1px 1.8px 1px #000000;
 	.popup {
 		visibility: visible;
 		opacity:1;
@@ -150,23 +178,26 @@ body {
 
 	background-color: $light-blue;
 	color:#fff;
+	text-shadow: 1px 1px 1px #000000;
 }
 
 h2 {
-	color: $light-blue;
+	color: #C1882A ;
+	font-family: Futura,bold, sans-serif;
 	font-size: 25px;
 	margin-top: 35px;
+	margin-bottom: 55px;
 }
 
 h2 span{
-	color: $light-blue;
+	color: #C1882A  ;
 	float:right;
 	font-weight: bold;
 }
 
 .XL-button {
-	text-decoration: none;
 	font-weight:bold;
+	text-decoration: none;
 }
 
 .box-pink-shirt .square-button {
@@ -177,31 +208,31 @@ h2 span{
 }
 
 .popup {
-	visibility: hidden;
-	opacity:0;
-	position:absolute;
 	background-color:#fff;
 	border: 3px solid $light-blue;
 	bottom:120%;
-	width:106%;
 	left:50%;
 	margin-left:-53%;
+	opacity:0;
+	position:absolute;
 	transition: all .5s;
+	visibility: hidden;
+	width:106%;
 
 }
 .popup:before, .popup:after {
-	content: " ";
+	border-color: transparent;
 	border-style: solid;
+	content: " ";
+	height:0;
+	left: 50%;
 	position: absolute;
 	top:100%;
-	left: 50%;
 	width:0;
-	height:0;
-	border-color: transparent;
 }
 .popup:after {
-	border-width: 12px;
 	border-top-color:#fff;
+	border-width: 12px;
 	margin-left: -12px;	
 }
 .popup:before {
@@ -213,6 +244,7 @@ h2 span{
 
 .popup .popup-squares {
 	position:relative;
+
 }
 
 	
@@ -242,19 +274,65 @@ h2 span{
 	color:$green;
 
 }
+
+.container-sizes {
+	height:12rem;
+	margin: 0 auto;
+	padding-bottom: 4rem;
+}
 .container-sizes-size {
-	position:relative;
+	background-image: url("../../imgs/tshirts/shirt_icon.svg");
+	background-position: center;
+	background-repeat: no-repeat;
+	margin-bottom: 1rem;
+	margin-top:1rem;
+	padding:18px;
+
+		p{
+			font-size: 10px;
+
+		}
 
 }
 
 .container-sizes-size-letter {
 	color:$light-blue;
-	position:absolute;
+	text-shadow: none;
 	
 }
 
 
 
 
+/* media querie section */
 
 
+/*tablet*/
+
+@media only screen 
+  and (min-width: 768px) {
+
+  	.main-container {
+    width: 100%;
+
+	.column {
+		
+		box-sizing: border-box;
+		float:left;
+		width:33%;
+	}
+
+}
+	.navbarlinks a {
+		display:inline-block;
+		font-size: 36px;
+		margin:10px;
+		padding:10px;
+	}
+
+  }
+
+/*laptop*/
+
+/*@media screen 
+  and (min-device-width: 1200px) */
